modified git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,10 @@ Backend/python/.env
 # Flutter
 Frontend/flutter/.env
 
+
+🚀 Deployment and Future Notes (AI Assistant System).docx
+Deployment_notes.pdf
+
 # ---------------------------
 # NODE JS
 # ---------------------------
